--- a/BabyPoo/app/build.gradle
+++ b/BabyPoo/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -47,19 +48,28 @@ android {
 
 dependencies {
     def nav_version = "2.5.1"
+    def room_version = "2.4.3"
+    def lifecycle_version = "2.5.1"
 
-    implementation "androidx.navigation:navigation-compose:$nav_version"
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation("androidx.room:room-runtime:$room_version")
+    annotationProcessor("androidx.room:room-compiler:$room_version")
+
+    kapt "androidx.room:room-compiler:$room_version"
+
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.1'
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation "androidx.compose.ui:ui:$compose_alpha"
+    implementation "androidx.compose.material:material:$compose_alpha"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_alpha"
+    implementation 'androidx.activity:activity-compose:1.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_alpha"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_alpha"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_alpha"
 }
