--- a/BabyPoo/app/build.gradle
+++ b/BabyPoo/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_alpha"
     implementation "androidx.compose.material:material:$compose_alpha"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_alpha"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_alpha"
     implementation 'androidx.activity:activity-compose:1.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
