--- a/BabyPoo/build.gradle
+++ b/BabyPoo/build.gradle
@@ -3,6 +3,9 @@ buildscript {
         compose_version = '1.3.0-rc02'
         compose_alpha = '1.3.0-alpha02'
     }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.2'
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.1' apply false
